Add qrcode creation endpoint
Add qrcode creation endpoint with account existence validation
and amount format

Jira ID: FIN-49
Testing done: ran existing and new tests
